some types added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="calculator">
 
         <div class="display">
-            69
         </div>
 
         <div class="first file">
@@ -41,8 +40,8 @@
         </div>
         <div class="four file">
             <button type="number">0</button>
-            <button>.</button>
-            <button> =</button>
+            <button type="number">.</button>
+            <button id="equal" type="operator"> =</button>
             <button type="operator" id="sub">-</button>
         </div>
 
