id for clear, delete and percentage added

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
 
         <div class="first file">
-            <button>CE</button>
+            <button id="clearBtn">CE</button>
             <button>C</button>
-            <button>%</button>
-            <button>DEL</button>
+            <button id="perBtn">%</button>
+            <button id="delBtn">DEL</button>
         </div>
         <div class="second file">
             <button type="number">9</button>
