id added to point button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="four file">
             <button type="number">0</button>
-            <button type="number">.</button>
+            <button type="number" id="point">.</button>
             <button id="equal" type="operator"> =</button>
             <button type="operator" id="sub">-</button>
         </div>
